Building the skills section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Porfolio</a></li>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">About</a></li>
@@ -32,14 +33,23 @@
     <section id="about-me" class="about-me">
         <div class="about-content">
             <div class="about-text">
+                <h1>I'm Nathaniel</h1>
+                <h3>A FullStack Developer, Web, Designer, Lorem Ipsum.</h3>
                 <p>Hello, I'm Nathaniel, a passionate and detail-oriented web developer with a love for creating elegant and functional websites. My journey in the world of coding began with a fascination for turning ideas into digital realities.</p>
-                <!-- <p>With a solid foundation in front-end and back-end technologies, I specialize in crafting responsive and user-friendly web applications. I thrive on challenges and am always eager to learn and adapt to emerging technologies.</p>
-                <p>My experience extends across various projects, from dynamic e-commerce platforms to interactive portfolio websites. I believe in the power of technology to solve problems and enhance user experiences.</p>
-                <p>What sets me apart is my commitment to clean and efficient code, coupled with a keen eye for design. I am dedicated to delivering high-quality solutions that not only meet but exceed expectations.</p> -->
+                <div class="buttons">
+                    <button class="hire">Hire Me</button>
+                    <button class="download">DownLoad Resume</button>
+                </div>
             </div>
             <div class="about-image">
                 <img src="images/nat.png.png" alt="Nathaniel's Photo">
             </div>
+        </div>
+    </section>
+
+    <section id="skills" class="skills">
+        <div class="container">
+            <h2></h2>
         </div>
     </section>
     
