--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
                 <h3>A FullStack Developer, Web, Designer, Lorem Ipsum.</h3>
                 <p>Hello, I'm Nathaniel, a passionate and detail-oriented web developer with a love for creating elegant and functional websites. My journey in the world of coding began with a fascination for turning ideas into digital realities.</p>
                 <div class="buttons">
-                    <button class="hire">Hire Me</button>
-                    <button class="download">DownLoad Resume</button>
+                    <div class="buts">
+                        <button class="hire"><i class='bx bxl-upwork'></i>Hire Me</button>
+                        <button class="download"><i class='bx bxs-download'></i>DownLoad Resume</button>
+                    </div>
+                    <div class="socials">
+
+                    </div>
                 </div>
             </div>
             <div class="about-image">
@@ -49,7 +54,45 @@
 
     <section id="skills" class="skills">
         <div class="container">
-            <h2></h2>
+            <h2>My Skills</h2>
+            <div class="all-skills">
+                <div class="single-skill">
+                    <i class="bx bxl-html5"></i>
+                    <h3>HTML5</h3>
+                </div>
+                <div class="single-skill">
+                    <i class="bx bxl-css3"></i>
+                    <h3>CSS3</h3>
+                </div>
+                <div class="single-skill">
+                    <i class='bx bxl-javascript' ></i>
+                    <h3>Javascript</h3>
+                </div>
+                <div class="single-skill">
+                    <i class="bx bxl-php"></i>
+                    <h3>PHP</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio" id="portfolio">
+        <h2>My Projects</h2>
+        <div class="all-projects">
+            <div class="single-projects">
+                <div class="project-img">
+                    <img src="images/eCommerce-Website.jpg" alt="">
+                </div>
+                <div class="project-text">
+                    <div class="project-details">
+                        <h3>Project 1: E-Commerce Website</h3>
+                        <!-- <p>A fully responsive e-commerce website with a user-friendly interface and secure payment processing.</p> -->
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p><strong>Technologies:</strong> HTML5, CSS3, JavaScript, Node.js, Express, MongoDB</p>
+                        <a href="https://github.com/yourusername/project1" >View Code</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     
